--- a/mission/1-3-mission.html
+++ b/mission/1-3-mission.html
@@ -31,16 +31,13 @@
             <ul>
                 <li>
                     <strong> 방법 1. 타행 내 계좌에서 카카오뱅크 계좌로 이체할 수 있습니다.</strong>
-                    <p> 카카오뱅크 계좌 개설 후, 앱 첫 화면의 내 계좌에 표시된 3333으로 시작하는 계좌번호를 확인해주세요. 타행 지점 및 인터넷/모바일 뱅킹 서비스에 카카오뱅크 계좌로 돈을 이체할 수
-                        있습니다.</p>
+                    <p> 카카오뱅크 계좌 개설 후, 앱 첫 화면의 내 계좌에 표시된 3333으로 시작하는 계좌번호를 확인해주세요. 타행 지점 및 인터넷/모바일 뱅킹 서비스에 카카오뱅크 계좌로 돈을 이체할 수 있습니다.</p>
                 </li>
 
                 <li>
                     <strong> 방법 2. 가까운 ATM에서 수중의 현금을 카카오뱅크 내 계좌로 입금할 수 있습니다.</strong>
-                    <p> 전국 모든 은행 및 일부 편의점에서 카카오뱅크 체크카드를 이용하여 현금 입금이 가능합니다.
-                    </p>
-                    <p>※ 입금 거래가 가능한 ATM: 모든 은행 및 입금 거래를 지원하는 ATM을 보유한 편의점에서 입금 가능하며, 특히 세븐일레븐 편의점의 경우 약 70%가 입금 가능한 기기가 설치되어
-                        있습니다.</p>
+                    <p> 전국 모든 은행 및 일부 편의점에서 카카오뱅크 체크카드를 이용하여 현금 입금이 가능합니다.</p>
+                    <p>※ 입금 거래가 가능한 ATM: 모든 은행 및 입금 거래를 지원하는 ATM을 보유한 편의점에서 입금 가능하며, 특히 세븐일레븐 편의점의 경우 약 70%가 입금 가능한 기기가 설치되어 있습니다.</p>
                 </li>
             </ul>
 
