--- a/mission/1-4-mission.html
+++ b/mission/1-4-mission.html
@@ -11,28 +11,28 @@
 <body>
     <h2>8퍼센트 웹사이트 1,595,863건의 투자가 이루어졌습니다.</h2>
 
-    <figure>
-        <p>
-            <q>소액투자자, 고액투자자 모두가 만족하고
+    <p>
+        <q>소액투자자, 고액투자자 모두가 만족하고
             <br>투자할 수 있는 P2P업체라고 생각합니다.</q>
-        </p>
+    </p>
+    <figure>
         <img src="./images/recommendation-1.3375116.jpg" alt="" width="70" height="70">
-        <p>
+        <figcaption>
             <strong>김형일 고객님</strong>
             <br> 30대, 직장인
-        </p>
+        </figcaption>
     </figure>
 
+    <p>
+        <q>성장 가능성이 무한한 회사!</q>
+        <br>그리고, 체계적인 시스템을 갖춘 플랫폼
+    </p>
     <figure>
-        <p>
-            <q>성장 가능성이 무한한 회사!</q>
-            <br>그리고, 체계적인 시스템을 갖춘 플랫폼
-        </p>
         <img src="./images/recommendation-2.8660629.jpg" alt="" width="70" height="70">
-        <p>
-            <strong>박수정고객님</strong>
+        <figcaption>
+            <strong>박수정 고객님</strong>
             <br> 30대, 직장인
-        </p>
+        </figcaption>
     </figure>
     
 </body>
