--- a/mission/1-8-mission.html
+++ b/mission/1-8-mission.html
@@ -61,17 +61,8 @@
             </div>
         </nav>
         <section class="contents">
-            <h2>
-                8 Real Classes Package
-            </h2>
-
-            <ul>
-                <li>강의노트 8원</li>
-                <li>암기북 5권</li>
-                <li>강의 8개</li>
-                <li>트레이닝 4개</li>
-                <li>아이스베어 무드등 무료증정</li>
-            </ul>
+            <h2>8 Real Classes Package</h2>
+            <img src=""alt="강의노트 8권, 암기북 5권, 강의 8개, 트레이닝 4개, 아이스베어 무드등 무료증정">
         </section>
         <div class="header-video">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/Z5bVHkYksyU?rel=0" allowfullscreen style="border:0;"></iframe>
