--- a/css-mission/2-4-mission/2-4-mission.html
+++ b/css-mission/2-4-mission/2-4-mission.html
@@ -9,34 +9,34 @@
 </head>
 <body>
    <div class="wrap">
-       <img src="images/css-layout__floating-01-01.png"> 
-       <img src="images/css-layout__floating-01-02.png"> 
-       <img src="images/css-layout__floating-01-03.png"> 
-       <img src="images/css-layout__floating-01-04.png"> 
-       <img src="images/css-layout__floating-01-05.png"> 
-       <img src="images/css-layout__floating-01-06.png"> 
-       <img src="images/css-layout__floating-01-07.png"> 
-       <img src="images/css-layout__floating-01-08.png"> 
-       <img src="images/css-layout__floating-01-09.png"> 
-       <img src="images/css-layout__floating-01-10.png"> 
-       <img src="images/css-layout__floating-01-11.png"> 
-       <img src="images/css-layout__floating-01-12.png"> 
-       <img src="images/css-layout__floating-01-13.png"> 
-       <img src="images/css-layout__floating-01-14.png"> 
-       <img src="images/css-layout__floating-01-15.png"> 
-       <img src="images/css-layout__floating-01-16.png"> 
-       <img src="images/css-layout__floating-01-17.png"> 
-       <img src="images/css-layout__floating-01-18.png"> 
-       <img src="images/css-layout__floating-01-19.png"> 
-       <img src="images/css-layout__floating-01-20.png"> 
-       <img src="images/css-layout__floating-01-21.png"> 
-       <img src="images/css-layout__floating-01-22.png"> 
-       <img src="images/css-layout__floating-01-23.png"> 
-       <img src="images/css-layout__floating-01-24.png"> 
-       <img src="images/css-layout__floating-01-25.png"> 
-       <img src="images/css-layout__floating-01-26.png"> 
-       <img src="images/css-layout__floating-01-27.png"> 
-       <img src="images/css-layout__floating-01-28.png"> 
+       <img src="images/css-layout__floating-01-01.png" alt=""> 
+       <img src="images/css-layout__floating-01-02.png" alt=""> 
+       <img src="images/css-layout__floating-01-03.png" alt=""> 
+       <img src="images/css-layout__floating-01-04.png" alt=""> 
+       <img src="images/css-layout__floating-01-05.png" alt=""> 
+       <img src="images/css-layout__floating-01-06.png" alt=""> 
+       <img src="images/css-layout__floating-01-07.png" alt=""> 
+       <img src="images/css-layout__floating-01-08.png" alt=""> 
+       <img src="images/css-layout__floating-01-09.png" alt=""> 
+       <img src="images/css-layout__floating-01-10.png" alt=""> 
+       <img src="images/css-layout__floating-01-11.png" alt=""> 
+       <img src="images/css-layout__floating-01-12.png" alt=""> 
+       <img src="images/css-layout__floating-01-13.png" alt=""> 
+       <img src="images/css-layout__floating-01-14.png" alt=""> 
+       <img src="images/css-layout__floating-01-15.png" alt=""> 
+       <img src="images/css-layout__floating-01-16.png" alt=""> 
+       <img src="images/css-layout__floating-01-17.png" alt=""> 
+       <img src="images/css-layout__floating-01-18.png" alt=""> 
+       <img src="images/css-layout__floating-01-19.png" alt=""> 
+       <img src="images/css-layout__floating-01-20.png" alt=""> 
+       <img src="images/css-layout__floating-01-21.png" alt=""> 
+       <img src="images/css-layout__floating-01-22.png" alt=""> 
+       <img src="images/css-layout__floating-01-23.png" alt=""> 
+       <img src="images/css-layout__floating-01-24.png" alt=""> 
+       <img src="images/css-layout__floating-01-25.png" alt=""> 
+       <img src="images/css-layout__floating-01-26.png" alt=""> 
+       <img src="images/css-layout__floating-01-27.png" alt=""> 
+       <img src="images/css-layout__floating-01-28.png" alt=""> 
    </div>
 </body>
 </html>
