--- a/css-mission/2-7-mission/2-7-mission.html
+++ b/css-mission/2-7-mission/2-7-mission.html
@@ -19,7 +19,8 @@
             <img src="images/robot-left.png" alt="robot-left">
         </div>
         <div class="youtube">
-            <img src="images/youtube.png" alt="youtube">
+                <iframe width="650" height="368" src="https://www.youtube.com/embed/llO-JR4ktEI?rel=0" allowfullscreen></iframe>
+                <img src="images/youtube.png" alt="youtube">
         </div>
         <div class="planet-left">
             <img src="images/planet-left.png" alt="planet-left">
